[package]
name = "flavo_engine"
version = "0.1.0"
edition = "2021"

[features]
debug = []
profile-with-optick = ["profiling/profile-with-optick"]

[dependencies]
# Vulkan
vulkano = "0.29.0"
vulkano-shaders = "0.29.0"
vulkano-win = "0.29.0"
winit = "0.26"
bytemuck = "1.8.0"

# Dear ImGUI
imgui-vulkano-renderer = "0.7.3"

# Resources
gltf = "1.0"

# Profiling
optick = "1.3.4"
profiling = "1.0.6"

# Other
rand = "0.8.5"
